@@ -76,6 +76,7 @@ extends|extends
 name|AbstractCallback
 block|{
 specifier|private
+specifier|final
 name|Method
 name|callbackMethod
 decl_stmt|;
@@ -94,16 +95,84 @@ throws|throws
 name|IllegalArgumentException
 block|{
 name|this
-operator|.
-name|callbackMethod
-operator|=
+argument_list|(
 name|findMethod
 argument_list|(
 name|objectClass
 argument_list|,
 name|methodName
 argument_list|)
+argument_list|)
 expr_stmt|;
+block|}
+comment|/**      * @since 4.2      */
+name|CallbackOnEntity
+parameter_list|(
+name|Method
+name|method
+parameter_list|)
+throws|throws
+name|IllegalArgumentException
+block|{
+if|if
+condition|(
+operator|!
+name|validateMethod
+argument_list|(
+name|method
+argument_list|)
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"Class "
+operator|+
+name|method
+operator|.
+name|getDeclaringClass
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+operator|+
+literal|" has no valid callback method '"
+operator|+
+name|method
+operator|.
+name|getName
+argument_list|()
+operator|+
+literal|"'"
+argument_list|)
+throw|;
+block|}
+name|this
+operator|.
+name|callbackMethod
+operator|=
+name|method
+expr_stmt|;
+if|if
+condition|(
+operator|!
+name|Util
+operator|.
+name|isAccessible
+argument_list|(
+name|callbackMethod
+argument_list|)
+condition|)
+block|{
+name|callbackMethod
+operator|.
+name|setAccessible
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 annotation|@
 name|Override
@@ -179,54 +248,15 @@ name|getName
 argument_list|()
 return|;
 block|}
+specifier|static
 specifier|private
-name|Method
-name|findMethod
+name|boolean
+name|validateMethod
 parameter_list|(
-name|Class
-argument_list|<
-name|?
-argument_list|>
-name|objectClass
-parameter_list|,
-name|String
-name|methodName
+name|Method
+name|method
 parameter_list|)
-throws|throws
-name|IllegalArgumentException
 block|{
-name|Method
-index|[]
-name|methods
-init|=
-name|objectClass
-operator|.
-name|getDeclaredMethods
-argument_list|()
-decl_stmt|;
-for|for
-control|(
-name|Method
-name|method
-range|:
-name|methods
-control|)
-block|{
-if|if
-condition|(
-name|methodName
-operator|.
-name|equals
-argument_list|(
-name|method
-operator|.
-name|getName
-argument_list|()
-argument_list|)
-condition|)
-block|{
-comment|// must be non-static, void, with no args
-comment|// JPA spec also requires it to be non-final, but we don't care
 name|int
 name|modifiers
 init|=
@@ -235,8 +265,9 @@ operator|.
 name|getModifiers
 argument_list|()
 decl_stmt|;
-if|if
-condition|(
+comment|// must be non-static, void, with no args
+comment|// JPA spec also requires it to be non-final, but we don't care
+return|return
 operator|!
 name|Modifier
 operator|.
@@ -265,33 +296,46 @@ operator|.
 name|length
 operator|==
 literal|0
-condition|)
+return|;
+block|}
+specifier|static
+specifier|private
+name|Method
+name|findMethod
+parameter_list|(
+name|Class
+argument_list|<
+name|?
+argument_list|>
+name|objectClass
+parameter_list|,
+name|String
+name|methodName
+parameter_list|)
+throws|throws
+name|IllegalArgumentException
 block|{
-if|if
-condition|(
-operator|!
-name|Util
-operator|.
-name|isAccessible
-argument_list|(
+name|Method
 name|method
-argument_list|)
-condition|)
+decl_stmt|;
+try|try
 block|{
 name|method
+operator|=
+name|objectClass
 operator|.
-name|setAccessible
+name|getDeclaredMethod
 argument_list|(
-literal|true
+name|methodName
 argument_list|)
 expr_stmt|;
 block|}
-return|return
-name|method
-return|;
-block|}
-block|}
-block|}
+catch|catch
+parameter_list|(
+name|NoSuchMethodException
+name|ex
+parameter_list|)
+block|{
 throw|throw
 operator|new
 name|IllegalArgumentException
@@ -310,6 +354,10 @@ operator|+
 literal|"'"
 argument_list|)
 throw|;
+block|}
+return|return
+name|method
+return|;
 block|}
 block|}
 end_class
